ApiGateway/apigatewaydeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigateway
  labels:
    app: apigateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apigateway
  template:
    metadata:
      name: apigateway
      labels:
        app: apigateway
    spec:
      containers:
        - name: apigateway
          image: vakdevi/apigateway:v0.01
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
