ApiGateway/api-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: minikube.local
    - http:
        paths:
          - path: /speech
            pathType: Prefix
            backend:
              service:
                name: speech-service
                port:
                  number: 8080
          - path: /summary
            pathType: Prefix
            backend:
              service:
                name: summary-service
                port:
                  number: 8081
          - path: /notes
            pathType: Prefix
            backend:
              service:
                name: notes-service
                port:
                  number: 8082
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8083
          - path: /quiz
            pathType: Prefix
            backend:
              service:
                name: quiz-service
                port:
                  number: 8084
          - path: /gateway
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 80
